# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

licenses(["reciprocal"])

exports_files(["LICENSE"])

eigen_files = [
    "Eigen/**",
    "unsupported/Eigen/**",
]

eigen_header_files = glob(
    eigen_files,
    exclude = [
        # This guarantees that any file depending on non MPL2 licensed code
        # will not compile.
        "Eigen/src/Core/util/NonMPL2.h",
    ],
)

cc_library(
    name = "eigen3",
    hdrs = eigen_header_files,
    copts = ["$(STACK_FRAME_UNLIMITED)"],
    defines = [
        "EIGEN_MPL2_ONLY",
    ],
    includes = ["."],
    licenses = ["reciprocal"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "blas",
    srcs = [
        "Eigen/src/misc/blas.h",
        "blas/complex_double.cpp",
        "blas/complex_single.cpp",
        "blas/double.cpp",
        "blas/f2c/chbmv.c",
        "blas/f2c/chpmv.c",
        "blas/f2c/complexdots.c",
        "blas/f2c/ctbmv.c",
        "blas/f2c/datatypes.h",
        "blas/f2c/d_cnjg.c",
        "blas/f2c/drotm.c",
        "blas/f2c/drotmg.c",
        "blas/f2c/dsbmv.c",
        "blas/f2c/dspmv.c",
        "blas/f2c/dtbmv.c",
        "blas/f2c/lsame.c",
        "blas/f2c/r_cnjg.c",
        "blas/f2c/srotm.c",
        "blas/f2c/srotmg.c",
        "blas/f2c/ssbmv.c",
        "blas/f2c/sspmv.c",
        "blas/f2c/stbmv.c",
        "blas/f2c/zhbmv.c",
        "blas/f2c/zhpmv.c",
        "blas/f2c/ztbmv.c",
        "blas/single.cpp",
        "blas/xerbla.cpp",
    ],
    hdrs = glob([
        "blas/*.h",
    ]),
    defines = [
        "EIGEN_MPL2_ONLY",
    ],
    includes = [
        ".",
        "blas",
    ],
    deps = [
        ":eigen3",
    ],
    copts = ["-w"],
    licenses = ["reciprocal"],
    visibility = ["//visibility:public"],
)
